@@ -1,3 +1,8 @@
+2009-01-07  scott s snyder  <snyder@bnl.gov>
+
+	* Tag as TrigT1CaloMonitoring-00-04-11
+	* src/JEPTransPerfMon.cxx: Fix compilation warnings.
+
 2009-01-05  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-04-10
         * Fix for Savannah bug #45532
